unpackaged/objects/Opportunity.object
<CustomObject>
  <fields>
    <fullName>GET_Opportunity_Subtype__c</fullName>
    <label>GET Opportunity Subtype</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>GET_Opportunity_type__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Bundle Recipient</fullName>
        </value>
        <value>
          <fullName>CE Attendee</fullName>
        </value>
        <value>
          <fullName>CEREC Owner</fullName>
        </value>
        <value>
          <fullName>Competitive Placer</fullName>
        </value>
        <value>
          <fullName>Digital Workflow</fullName>
        </value>
        <value>
          <fullName>Edentulous</fullName>
        </value>
        <value>
          <fullName>New Starter</fullName>
        </value>
        <value>
          <fullName>Other</fullName>
        </value>
        <value>
          <fullName>Regen</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>GET_Opportunity_type__c</fullName>
    <description>For IMPL NA
            Competitive Specialist: OMS, Perio, or Prosth that already places implants, likely in a ‘referral-based’ practice. Almost certainly 50+ annually.
            Cerec Owner GP: GP that we have targeted for implant unit sales, because they own Sirona equipment and we assume / know that they place implants
            Competitive Placer GP: GP that we know places implants due to local knowledge</description>
    <inlineHelpText>Competitive Specialist: OMS/Perio/Prosth places implants, likely +50 Implants Potential/Year
            Cerec Owner GP: Owner of Sirona equipment, targeted for implant unit sales
            Competitor Placer GP: Placer of implants</inlineHelpText>
    <label>GET Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Cerec Owner GP</fullName>
        </value>
        <value>
          <fullName>Competitive Placer GP</fullName>
        </value>
        <value>
          <fullName>Competitive Specialist</fullName>
        </value>
        <value>
          <fullName>Standard</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Growing_Practice_Market_Share__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this check box if you are planning on growing this Account by increasing the Dentsply Implants market share.</description>
    <inlineHelpText>Check this check box if you are planning on growing this Account by increasing the Dentsply Implants market share.</inlineHelpText>
    <label>Growing Practice Market Share</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Growing_Practice_with_Refferal_events_IP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this check box if you are planning on growing this Account by Refferal events/IP (CH/DE)</description>
    <inlineHelpText>Check this check box if you are planning on growing this Account by Refferal events/IP</inlineHelpText>
    <label>Growing Practice with Refferal events/IP</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Growing_Practice_with_STEPPS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this check box if you are planning on growing this Account by STEPPS (CH/DE)</description>
    <inlineHelpText>Check this check box if you are planning on growing this Account by STEPPS (CH/DE)</inlineHelpText>
    <label>Growing Practice with STEPPS</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>HQTriggerField__c</fullName>
    <description>Used by HQ to trigger enforced Naming Convention</description>
    <inlineHelpText>Used by HQ to trigger enforced Naming Convention</inlineHelpText>
    <label>HQTriggerField</label>
    <length>1</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>High_Level_Plan__c</fullName>
    <description>Please input here the high level activity you are planning to conduct in order to close the Opportunity.</description>
    <inlineHelpText>Please input here the high level activity you are planning to conduct in order to close the Opportunity.</inlineHelpText>
    <label>High Level Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>IMG_Est_Sales_CY__c</fullName>
    <description>COS field used for North America Dental.</description>
    <formula>( Account_Est_Sales_CY__c  / MAX(Account_Est_Sales_CY__c  ,  Sales_Dental_YTD__c  ,  Sales_Dental_LY__c  ))*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IMG Est Sales CY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>IMG_Sales_Graph__c</fullName>
    <formula>IMAGE("http://chart.apis.google.com/chart?cht=bhs&amp;chd=t:" &amp;
            Text(IMG_Est_Sales_CY__c ) &amp; "," &amp;
            Text( IMG_Sales_YTD__c ) &amp; "," &amp;
            Text( IMG_Sales_LY__c ) &amp;
            "&amp;chbh=10&amp;chs=250x60&amp;chf=bg,s,F3F3EC&amp;chdl=Est Sales CY|Sales YTD|Sales LY&amp;chco=4D89D9 ",
            "chart text")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IMG Sales Graph</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>IMG_Sales_LY__c</fullName>
    <description>COS field used for North America Dental.</description>
    <formula>( Sales_Dental_LY__c / MAX( Account_Est_Sales_CY__c ,  Sales_Dental_YTD__c , Sales_Dental_LY__c ))*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IMG Sales LY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>IMG_Sales_YTD__c</fullName>
    <description>COS field used for North America Dental.</description>
    <formula>(Sales_Dental_YTD__c   / MAX( Account_Est_Sales_CY__c ,  Sales_Dental_YTD__c  ,  Sales_Dental_LY__c ))*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IMG Sales YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>IMPL_Data_Quality_Description__c</fullName>
    <formula>IF( Data_Quality_Score__c =60,"All Opportunity Details Captured", "Missing: "&amp;""&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, "Close Date, ","")&amp;""&amp;IF( ISPICKVAL( Main_Competitor__c,""), "Main competitor, ","")&amp;""&amp;IF( LEN(NextStep)=0, "Next Steps",""))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IMPL Data Quality Description</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>IMPL_Data_Quality_Score__c</fullName>
    <formula>IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( ISPICKVAL( Main_Competitor__c ,""), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IMPL Data Quality Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Implants_Won_Date__c</fullName>
    <formula>Account.LastWonEventYearMonth_Implants__c</formula>
    <label>Implants Won Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Implants_Won_Lost_Status__c</fullName>
    <formula>Account.WonLostStatus_Implants_EndField__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implants Won/Lost Status</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Implants__c</fullName>
    <formula>if (or(includes( Account.Clinic_Treatment_Focus__c ,"Implantology"), includes( Account.Clinic_Treatment_Focus__c ,"Implant Surgery"),includes( Account.Clinic_Treatment_Focus__c ,"Implant Restorations")),True,False)</formula>
    <label>Implants</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Improved_based_on_Managers_feedback__c</fullName>
    <inlineHelpText>Set by SR when feedback provided by Sales Manager is corrected. By setting this field Sales Manager is notified to check AP again and approve it.
If Sales Manager still does not approve the AP, he is to uncheck this field to again send back to SR.</inlineHelpText>
    <label>Improved based on Managers feedback</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>No</fullName>
        </value>
        <value>
          <fullName>Yes</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Include_Equipment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary field for NA to track if Equipment is included for Cerec GET AP</description>
    <label>Include Equipment</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Key_Account_Type__c</fullName>
    <formula>TEXT(Account.Key_Account_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Account Type</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Key_Acct__c</fullName>
    <formula>IF(Account.Key_Account__c=True, "Yes", "No")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is the Account (blue Account Page) a Key Account?</inlineHelpText>
    <label>Key Acct</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Key_GET_Opportunity_NA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates this opportunity as one of the required 5 Key GET Opportunities</description>
    <inlineHelpText>Designates this opportunity as one of the required 5 Key GET Opportunities</inlineHelpText>
    <label>Key GET Opportunity - NA</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>LY_Accomplishment_To_Date__c</fullName>
    <inlineHelpText>Field contains the Account Plan Accomplishment To Date from last year. Automatically set be Salesforce at the end of each year.</inlineHelpText>
    <label>LY Accomplishment To Date</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>LY_High_Level_Plan__c</fullName>
    <inlineHelpText>Field contains the Account Plan High Level Plan from last year. Automatically set be Salesforce at the end of each year.</inlineHelpText>
    <label>LY High Level Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>LY_Obstacles_To_Overcome__c</fullName>
    <inlineHelpText>Field contains the Account Plan Obstacles To Overcome from last year. Automatically set be Salesforce at the end of each year.</inlineHelpText>
    <label>LY Obstacles To Overcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>LY_Summary__c</fullName>
    <inlineHelpText>Field contains the Account Plan Summary from last year. Automatically set be Salesforce at the end of each year.</inlineHelpText>
    <label>LY Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Last_Stage_Change_Date__c</fullName>
    <description>Date when the Opportunity stage was last changed. Used to calculate Stage Duration used for the Opportunity Flag-handling.</description>
    <inlineHelpText>Date when the Opportunity stage was last changed.</inlineHelpText>
    <label>Last Stage Change Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>LeftCardLiterature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Left Card/Literature</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Loss_Cancellation_Description__c</fullName>
    <label>Loss/Cancellation Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Loss_Cancellation_Reason__c</fullName>
    <label>Loss/Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>StageName</controllingField>
      <valueSetDefinition>
        <value>
          <fullName>Account no longer eligible for GROW Account Plan</fullName>
        </value>
        <value>
          <fullName>Administration Error</fullName>
        </value>
        <value>
          <fullName>Closed due to opportunity inactivity</fullName>
        </value>
        <value>
          <fullName>Price</fullName>
        </value>
        <value>
          <fullName>Product</fullName>
        </value>
        <value>
          <fullName>Promotion</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Lost_Opportunity_Reason__c</fullName>
    <label>Lost Opportunity Reason</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>StageName</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Competitor Related</fullName>
        </value>
        <value>
          <fullName>Others</fullName>
        </value>
        <value>
          <fullName>Price Related</fullName>
        </value>
        <value>
          <fullName>Product Feature Related</fullName>
        </value>
        <value>
          <fullName>Service Related</fullName>
        </value>
        <value>
          <fullName>Time Related</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Main_Competitor_D__c</fullName>
    <description>Main Competitor is taken from the Account Record. If this field is empty, please update the Main Competitor field on the Account.</description>
    <formula>Account.Main_Competitor_D__r.Name</formula>
    <inlineHelpText>Main Competitor is taken from the Account Record. If this field is empty, please update the Main Competitor field on the Account.</inlineHelpText>
    <label>Main Competitor</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Main_Competitor__c</fullName>
    <label>Main Competitor</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>3i Implant Innovations</fullName>
        </value>
        <value>
          <fullName>3M Lava</fullName>
        </value>
        <value>
          <fullName>Bard</fullName>
        </value>
        <value>
          <fullName>BBRaun</fullName>
        </value>
        <value>
          <fullName>Biomet 3i</fullName>
        </value>
        <value>
          <fullName>Camlog</fullName>
        </value>
        <value>
          <fullName>Coloplast</fullName>
        </value>
        <value>
          <fullName>Custom Cast/UCLA</fullName>
        </value>
        <value>
          <fullName>Dentsply/Friadent</fullName>
        </value>
        <value>
          <fullName>Didecco</fullName>
        </value>
        <value>
          <fullName>Etkon</fullName>
        </value>
        <value>
          <fullName>Fresenius Kabi</fullName>
        </value>
        <value>
          <fullName>Haemonetics</fullName>
        </value>
        <value>
          <fullName>Hollister</fullName>
        </value>
        <value>
          <fullName>Johnson&amp;Johnson</fullName>
        </value>
        <value>
          <fullName>Manfred Sauer</fullName>
        </value>
        <value>
          <fullName>Medtronic</fullName>
        </value>
        <value>
          <fullName>Modified Stock</fullName>
        </value>
        <value>
          <fullName>Nobel</fullName>
        </value>
        <value>
          <fullName>Nobel Biocare</fullName>
        </value>
        <value>
          <fullName>Other</fullName>
        </value>
        <value>
          <fullName>Procera</fullName>
        </value>
        <value>
          <fullName>Sorin</fullName>
        </value>
        <value>
          <fullName>Straumann</fullName>
        </value>
        <value>
          <fullName>Summit</fullName>
        </value>
        <value>
          <fullName>Teleflex-Rusch Care</fullName>
        </value>
        <value>
          <fullName>Unomedical</fullName>
        </value>
        <value>
          <fullName>Zimmer</fullName>
        </value>
        <value>
          <fullName>Zimmer Dental</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>ManualName__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set Name Manually</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Manual_Commission__c</fullName>
    <description>Some countries asked the possibility to enter manual commission for X-sbu opportunities being the automatic field can not be used for calculating commissions on the product brand level</description>
    <label>Manual Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Minimum_CFEs__c</fullName>
    <label>Minimum CFEs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>NA_Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>NA_Category__c</controllingField>
      <valueSetDefinition>
        <value>
          <fullName>3D Upgrade</fullName>
        </value>
        <value>
          <fullName>ACB with ASA</fullName>
        </value>
        <value>
          <fullName>AH Plus</fullName>
        </value>
        <value>
          <fullName>AH Temp</fullName>
        </value>
        <value>
          <fullName>AlginX</fullName>
        </value>
        <value>
          <fullName>All Ceramics</fullName>
        </value>
        <value>
          <fullName>All Other Endo</fullName>
        </value>
        <value>
          <fullName>All Other - Niti Rotary Files</fullName>
        </value>
        <value>
          <fullName>All Other – Obturation</fullName>
        </value>
        <value>
          <fullName>Anaestadent</fullName>
        </value>
        <value>
          <fullName>Ancillary</fullName>
        </value>
        <value>
          <fullName>ANKYLOS</fullName>
        </value>
        <value>
          <fullName>Apex Locator</fullName>
        </value>
        <value>
          <fullName>Aquasil</fullName>
        </value>
        <value>
          <fullName>Aquasil Ultra Plus</fullName>
        </value>
        <value>
          <fullName>ATIS</fullName>
        </value>
        <value>
          <fullName>ATIS EV</fullName>
        </value>
        <value>
          <fullName>ATIS TX</fullName>
        </value>
        <value>
          <fullName>Atlantis</fullName>
        </value>
        <value>
          <fullName>Atlantis Abutments</fullName>
        </value>
        <value>
          <fullName>Atlantis Suprastructures</fullName>
        </value>
        <value>
          <fullName>Automate</fullName>
        </value>
        <value>
          <fullName>Axeos</fullName>
        </value>
        <value>
          <fullName>Azento Astra Tech</fullName>
        </value>
        <value>
          <fullName>Azento EV</fullName>
        </value>
        <value>
          <fullName>Azento XiVE</fullName>
        </value>
        <value>
          <fullName>Bioceramic</fullName>
        </value>
        <value>
          <fullName>Bluecam</fullName>
        </value>
        <value>
          <fullName>Bonding</fullName>
        </value>
        <value>
          <fullName>Bone</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>NA_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>User_Country__c</controllingField>
      <valueSetDefinition>
        <value>
          <fullName>3D Imaging</fullName>
        </value>
        <value>
          <fullName>ATLANTIS</fullName>
        </value>
        <value>
          <fullName>CEREC Equipment</fullName>
        </value>
        <value>
          <fullName>Consumables</fullName>
        </value>
        <value>
          <fullName>Digital Group</fullName>
        </value>
        <value>
          <fullName>Digital</fullName>
        </value>
        <value>
          <fullName>Digital Solutions</fullName>
        </value>
        <value>
          <fullName>Endentulous</fullName>
        </value>
        <value>
          <fullName>Endodontics</fullName>
        </value>
        <value>
          <fullName>Equipment</fullName>
        </value>
        <value>
          <fullName>Equipment &amp; Imaging</fullName>
        </value>
        <value>
          <fullName>Extra Oral Imaging</fullName>
        </value>
        <value>
          <fullName>Implants</fullName>
        </value>
        <value>
          <fullName>InLab</fullName>
        </value>
        <value>
          <fullName>Intra Oral Imaging</fullName>
        </value>
        <value>
          <fullName>Midwest Equipment</fullName>
        </value>
        <value>
          <fullName>Orthodontics</fullName>
        </value>
        <value>
          <fullName>Preventive</fullName>
        </value>
        <value>
          <fullName>Prosthetics</fullName>
        </value>
        <value>
          <fullName>Regenerative</fullName>
        </value>
        <value>
          <fullName>Restorative</fullName>
        </value>
        <value>
          <fullName>Treatment Centers</fullName>
        </value>
        <value>
          <fullName>Class II</fullName>
        </value>
        <value>
          <fullName>Single Unit Crown</fullName>
        </value>
        <value>
          <fullName>Root To Crown</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>NA_Opportunity_Type__c</fullName>
    <label>NA: Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>ISUS Case</fullName>
        </value>
        <value>
          <fullName>Key Restorative/Atlantis Get</fullName>
        </value>
        <value>
          <fullName>Key Surgical Get</fullName>
        </value>
        <value>
          <fullName>Key Surgical Grow</fullName>
        </value>
        <value>
          <fullName>Simplant Target</fullName>
        </value>
        <value>
          <fullName>SmartFix Case</fullName>
        </value>
        <value>
          <fullName>Symbios Target</fullName>
        </value>
        <value>
          <fullName>Top EV Target</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Network__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Network</label>
    <referenceTo>Network__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>R00N20000000pV52EAE</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>New_Cases_Year_Ortho__c</fullName>
    <description>Used in the Ortho implementation</description>
    <inlineHelpText>Number of new pateints par year (with new bracket placement.) Entered once upon creation of Account or Opportunity and should not be modified afterwards</inlineHelpText>
    <label>New Cases / Year (ORTH)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Next_Steps_Last_Modified_Date__c</fullName>
    <description>Workflow will update this file with date the Opportunity was last modified.</description>
    <label>Next Steps Last Modified Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>OK__c</fullName>
    <description>COS field used for North America Dental.</description>
    <inlineHelpText>Estimated Cost, related to this single Objective.</inlineHelpText>
    <label>Objective Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Objective_Specifics__c</fullName>
    <description>COS field used for North America Dental.</description>
    <inlineHelpText>Select the 'Specifics' of this Objective. The selections available is dependent on the 'Objective' category above.</inlineHelpText>
    <label>Objective Specifics</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Objective__c</controllingField>
      <valueSetDefinition>
        <value>
          <fullName>--</fullName>
        </value>
        <value>
          <fullName>---</fullName>
        </value>
        <value>
          <fullName>Bone Maintenance</fullName>
        </value>
        <value>
          <fullName>Equipment Purchased/Need</fullName>
        </value>
        <value>
          <fullName>Grow/ Educate Referral Base</fullName>
        </value>
        <value>
          <fullName>Guided Surgery</fullName>
        </value>
        <value>
          <fullName>Lower Failure Risks</fullName>
        </value>
        <value>
          <fullName>Optimal Esthetics</fullName>
        </value>
        <value>
          <fullName>Our Unique Product</fullName>
        </value>
        <value>
          <fullName>Patient Acceptance</fullName>
        </value>
        <value>
          <fullName>Streamline Inventory</fullName>
        </value>
        <value>
          <fullName>Train/ Stabilize Staff</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Objective__c</fullName>
    <description>COS field used for North America Dental.</description>
    <inlineHelpText>Classify the overall 'Objective' category.</inlineHelpText>
    <label>Objective</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Clinical Outcome</fullName>
        </value>
        <value>
          <fullName>Marketing / Sales Support</fullName>
        </value>
        <value>
          <fullName>Product / Procedures</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Obstacles_To_Overcome__c</fullName>
    <description>Please enter the obstacles you foresee - and how to overcome them - related to the Opportunity for this Account..</description>
    <inlineHelpText>Please enter the obstacles you foresee - and how to overcome them - related to the Opportunity for this Account.</inlineHelpText>
    <label>Obstacles To Overcome</label>
    <length>500</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Opportunity_Closed_Date__c</fullName>
    <label>Opportunity Closed Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Opportunity_Flag_D_ATL__c</fullName>
    <formula>IF(IsClosed,"Not Applicable",
            IF( RecordTypeId="01220000000PiO9",

            IF( OR(  Sales_ILY_D_ATL__c  &lt;=1, CFEs_Last_6_Months_D__c &lt; Minimum_CFEs__c,  Account.Growth_Criteria_Met__c =0  ),

            IF( OR ( Account.Growth_Criteria_Met__c =0,AND( Sales_ILY_D_ATL__c &lt;=1, CFEs_Last_6_Months_D__c &lt;Minimum_CFEs__c )), IMAGE("/servlet/servlet.FileDownload?file=01520000000yzK6", "Red Flag"), IMAGE("/servlet/servlet.FileDownload?file=01520000000zblq", "Yellow Flag")), IMAGE("/servlet/servlet.FileDownload?file=01520000000yzK1","Green Flag")),

            IF( RecordTypeId= "01220000000PiO4",

            IF( Overdue_Formula__c = "YES", IMAGE("/servlet/servlet.FileDownload?file=01520000000yzK6", "Red Flag"), IF (OR( Stage_Duration__c &gt; Stage_duration_criteria__c , CFEs_Last_6_Months_D__c &lt;Minimum_CFEs__c  ),

            IF( and( Stage_Duration__c &gt;Stage_duration_criteria__c, CFEs_Last_6_Months_D__c &lt;Minimum_CFEs__c  ), IMAGE("/servlet/servlet.FileDownload?file=01520000000yzK6", "Red Flag"), IMAGE("/servlet/servlet.FileDownload?file=01520000000zblq", "Yellow Flag") ), IMAGE("/servlet/servlet.FileDownload?file=01520000000yzK1","Green Flag") )
            ), "Not Applicable"
            )
            )
            )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Flag (ATL)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Opportunity_Flag_D__c</fullName>
    <description>GET-RED: Stage Duration &gt;90days YELLOW: Stage Duration 60-90days, GREEN: Stage Duration&lt;60 days
GROW-RED: Predicted Implant Units CY not on track &amp; Sales ILY%&lt;100 &amp; &lt;6 CFEs L6M. YELLOW: Predicted Implant Unites CY not on track OR Sales ILY%&lt;100 OR &lt;6 CFEs Last 6 Months.</description>
    <formula>IF(IsClosed,"Not Applicable",

IF( OR( RecordTypeId="01220000000DqeM", RecordTypeId="01220000000Dv29"),

IF( CFEs_Last_6_Months_D__c  &gt;=  Minimum_CFEs__c  &amp;&amp;  Sold_Implants_ILY__c  &gt;= 1   &amp;&amp; Sold_Implants_Proj__c  &gt;= 1, IMAGE("/img/samples/light_green.gif","Green Flag"),

IF(CFEs_Last_6_Months_D__c  &lt;  Minimum_CFEs__c  &amp;&amp;  Sold_Implants_ILY__c  &lt; 1 &amp;&amp;  Sold_Implants_Proj__c  &lt;1,IMAGE("/img/samples/light_red.gif", "Red Flag") , IMAGE("/img/samples/light_yellow.gif", "Yellow Flag")

)

),

IF( OR( RecordTypeId = "01220000000Dv1f", RecordTypeId= "01220000000DqeH" ),

IF( Stage_Duration__c  &lt;=  60 , IMAGE("/img/samples/light_green.gif","Green Flag"),

IF(Stage_Duration__c  &gt;= 90, IMAGE("/img/samples/light_red.gif", "Red Flag"), IMAGE("/img/samples/light_yellow.gif", "Yellow Flag"))

), "Not Applicable"
)
)
)



/*
IF(IsClosed,"Not Applicable",

IF( OR( RecordTypeId="01220000000DqeM", RecordTypeId="01220000000Dv29"),

IF( CFEs_Last_6_Months_D__c  &gt;=  Minimum_CFEs__c  &amp;&amp;  Sold_Implants_ILY__c  &gt;= 1   &amp;&amp; Sold_Implants_Proj__c  &gt;= 1, IMAGE("/servlet/servlet.FileDownload?file=01520000000yzK1","Green Flag"),

IF(CFEs_Last_6_Months_D__c  &lt;  Minimum_CFEs__c  &amp;&amp;  Sold_Implants_ILY__c  &lt; 1 &amp;&amp;  Sold_Implants_Proj__c  &lt;1,IMAGE("/servlet/servlet.FileDownload?file=01520000000yzK6", "Red Flag") , IMAGE("/servlet/servlet.FileDownload?file=01520000000zblq", "Yellow Flag")

)

),

IF( OR( RecordTypeId = "01220000000Dv1f", RecordTypeId= "01220000000DqeH" ),

IF( Overdue_Formula__c = "NO" &amp;&amp; Stage_Duration__c  &lt;=  Stage_duration_criteria__c &amp;&amp;  CFEs_Last_6_Months_D__c  &gt;=  Minimum_CFEs__c, IMAGE("/servlet/servlet.FileDownload?file=01520000000yzK1","Green Flag"),

IF(Overdue_Formula__c = "YES" &amp;&amp; Stage_Duration__c  &gt;  Stage_duration_criteria__c &amp;&amp;  CFEs_Last_6_Months_D__c  &lt;  Minimum_CFEs__c, IMAGE("/servlet/servlet.FileDownload?file=01520000000yzK6", "Red Flag"), IMAGE("/servlet/servlet.FileDownload?file=01520000000zblq", "Yellow Flag"))

), "Not Applicable"
)
)
)

*/
/*
IF(IsClosed,"Not Applicable",
IF( OR( RecordTypeId="01220000000DqeM", RecordTypeId="01220000000Dv29"),

IF( OR( Sold_Implants_ILY__c &lt;=1, CFEs_Last_6_Months_D__c &lt; Minimum_CFEs__c,  Account.Growth_Criteria_Met__c =0  ),

IF( OR ( Account.Growth_Criteria_Met__c =0,AND( Sold_Implants_ILY__c &lt;=1, CFEs_Last_6_Months_D__c &lt;Minimum_CFEs__c )), IMAGE("/servlet/servlet.FileDownload?file=01520000000yzK6", "Red Flag"), IMAGE("/servlet/servlet.FileDownload?file=01520000000zblq", "Yellow Flag")), IMAGE("/servlet/servlet.FileDownload?file=01520000000yzK1","Green Flag")),

IF( OR( RecordTypeId = "01220000000Dv1f", RecordTypeId= "01220000000DqeH" ),

IF( Overdue_Formula__c = "YES", IMAGE("/servlet/servlet.FileDownload?file=01520000000yzK6", "Red Flag"), IF (OR( Stage_Duration__c &gt; Stage_duration_criteria__c , CFEs_Last_6_Months_D__c &lt;Minimum_CFEs__c  ),

IF( and( Stage_Duration__c &gt;Stage_duration_criteria__c, CFEs_Last_6_Months_D__c &lt;Minimum_CFEs__c  ), IMAGE("/servlet/servlet.FileDownload?file=01520000000yzK6", "Red Flag"), IMAGE("/servlet/servlet.FileDownload?file=01520000000zblq", "Yellow Flag") ), IMAGE("/servlet/servlet.FileDownload?file=01520000000yzK1","Green Flag") )
), "Not Applicable"
)
)
)

*/</formula>
    <inlineHelpText>GET-RED: Stage Duration &gt;90d YELLOW: Stage Duration 60-90d, GREEN: Stage Duration&lt;60 d
GROW-RED: Predicted Implant Units CY not on track &amp; Sales ILY%&lt;100 &amp; &lt;6 CFEs L6M. YELLOW: Predicted Implant Unites CY not on track OR Sales ILY%&lt;100 OR &lt;6 CFEs</inlineHelpText>
    <label>AP Progress Status</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Opportunity_Flag_Tag_D_ATL__c</fullName>
    <formula>IF(IsClosed,"Not Applicable",
            IF( RecordTypeId="01220000000PiO9",

            IF( OR(  Sales_ILY_D_ATL__c &lt;=1, CFEs_Last_6_Months_D__c &lt; Minimum_CFEs__c, Account.Growth_Criteria_Met__c =0 ),

            IF( OR ( Account.Growth_Criteria_Met__c =0,AND( Sales_ILY_D_ATL__c  &lt;=1, CFEs_Last_6_Months_D__c &lt;Minimum_CFEs__c )), "a. Red Flag","c. Yellow Flag"), "b. Green Flag"),

            IF( RecordTypeId= "01220000000PiO4",

            IF( Overdue_Formula__c = "YES", "a. Red Flag", IF (OR( Stage_Duration__c &gt; Stage_duration_criteria__c , CFEs_Last_6_Months_D__c &lt;Minimum_CFEs__c ),

            IF( and( Stage_Duration__c &gt;Stage_duration_criteria__c, CFEs_Last_6_Months_D__c &lt;Minimum_CFEs__c ), "a. Red Flag", "c. Yellow Flag" ), "b. Green Flag" )
            ), "Not Applicable"
            )
            )
            )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Flag Tag (ATL)</label>
    <type>Text</type>
  </fields>
</CustomObject>